# nautilus-dinger

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  check_account.py  check_portfolio.py  live_btc_price.py  live_trader.py  paradex_data_client.py  place_order.py  pyproject.toml  robustness_100.py  simple_trading_loop.py  websocket_live_price.py
.sisyphus/drafts/: validation-plan.md
config/: setup_api_key.sh
crates/adapters/paradex/: AGENTS.md  Cargo.toml  ORDER_READY.md
crates/adapters/paradex/src/: concurrency.rs  config.rs  error.rs  lib.rs  python_wrapper.rs
crates/adapters/paradex/src/auth/: jwt.rs  mod.rs
crates/adapters/paradex/src/common/: mod.rs  types.rs
crates/adapters/paradex/src/http/: client.rs  mod.rs
crates/adapters/paradex/src/python/: mod.rs
crates/adapters/paradex/src/signing/: mod.rs  signer.rs  types.rs
crates/adapters/paradex/src/state/: mod.rs  models.rs  reconciliation.rs  state.rs
crates/adapters/paradex/src/websocket/: client.rs  handlers.rs  jsonrpc_client.rs  mod.rs  simple_client.rs
crates/adapters/paradex/tests/: config_tests.rs  integration_tests.rs  test_end_to_end.py
examples/: README.md
examples/order_placement/: place_order_with_sl_tp.py
memory-bank/paradex/: AGENTS.md  COMPLETE_STATUS_2026_01_29.md  LEARNING_LOG_SETUP_COMPLETE.md  ORDER_PLACEMENT_SUCCESS.md  PHASE2_SUMMARY.md  PROJECT_COMPLETE.md  README.md  REORGANIZATION_COMPLETE.md  RUST_ADAPTER_FINAL_STATUS.md  RUST_ADAPTER_TEST_RESULTS.md  RUST_AUTH_COMPARISON.md  RUST_AUTH_IMPLEMENTATION.md  RUST_PYTHON_WRAPPER_COMPLETE.md  WORKFLOW_V2_SUMMARY.md
memory-bank/paradex/ESSENTIAL/: BUGS.md  CONFIG.md  LEARNING_LOG_INSTRUCTIONS.md  MASTER_AGENT_PROMPT.md  PATTERNS.md  START_HERE.md  WORKFLOW.md  WORKFLOW_COMPARISON.md  WORKFLOW_V2.md  WORKFLOW_V3.md
memory-bank/paradex/archive/old_reference/rust/: Cargo.toml  error.rs
memory-bank/paradex/docs/: ACCOUNT_CHECK.md  CURRENT_PHASE.md  ENHANCEMENTS_COMPLETE.md  LIVE_BTC_PRICE.md  NAUTILUS_PARADEX_COMPLETE.md  PARADEX_AUTH_GUIDE.md  PORTFOLIO_CHECK.md  PRODUCTION_READY.md  RACE_CONDITION_PROTECTION.md  RACE_TEST_RESULTS.md  README.md  REQWEST_COMPARISON.md  RESTRUCTURE_COMPLETE.md  REST_IN_RUST.md  REST_SOURCE_OF_TRUTH.md  REST_VS_WEBSOCKET_RACE.md  WEBSOCKET_COMPLETE.md  WEBSOCKET_FINAL_STATUS.md  WEBSOCKET_STATUS.md
memory-bank/paradex/exploration/: exploration-notes.md
memory-bank/paradex/tracking/: API_KEY_AUTH.md  END_TO_END_TEST.md  JWT_AUTH_FIX.md  PHASE2_COMPLETE.md  PHASE2_VALIDATION.md  PHASE3_COMPLETE.md  PHASE3_PROGRESS.md  PHASE4_PROGRESS.md  PHASE5_DEPLOYMENT.md  bug-fixes-record.md  dependency-graph.md  improvements-log.md  learning-log-quick-ref.md  learning-log.md  progress.md  validation-results.md
memory-bank/shared/: README.md
nautilus_trader/adapters/paradex/: AGENTS.md  __init__.py  _rust.py  config.py  constants.py  data.py  execution.py  factories.py  providers.py
scripts/: README.md
scripts/monitoring/: live_btc_enhanced.py  live_top5_stream.py  monitoring_dashboard.py  websocket_paradex_py.py  ws_top5_markets.py
scripts/trading/: check_account_value.py  close_positions.py  place_order_final.py
scripts/utils/: nautilus_full_loop.py  nautilus_paradex_strategy.py  rust_20_trades.py
tests/: Makefile  README.md  pytest.ini
tests/mocks/: README.md  test_stark.py  ws_server.py
tests/python/: nautilus_loop_test.py  place_order_jwt.py  robustness_test.py  test_adapter_loop.py  test_race_conditions.py  test_race_rust_vs_rest.py  test_rust_full.py
(+54 files in other folders)
