[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nautilus-dinger"
version = "0.1.0"
description = "Paradex trading adapter for Nautilus Trader"
requires-python = ">=3.10"
dependencies = [
    "nautilus_trader",
    "aiohttp",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "maturin>=1.0",
]

[tool.maturin]
python-source = "."
module-name = "paradex_adapter"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
