[package]
name = "paradex-adapter"
version = "4.0.0"
edition = "2021"
rust-version = "1.75"

[lib]
name = "paradex_adapter"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py312"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

# StarkNet crypto
starknet-crypto = "0.8"
starknet-types-core = "0.2"

# Async
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
ustr = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
parking_lot = "0.12"
dashmap = "5.5"
tracing = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# WebSocket client
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

[dev-dependencies]
tokio-test = "0.4"
axum = "0.7"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
